--- a/src/main/resources/i18n/exception_ko.yml
+++ b/src/main/resources/i18n/exception_ko.yml
@@ -1,15 +1,38 @@
 unKnown:
   code: "-9999"
-  msg: "알 수 없는 오류"
+  title_msg: "알 수 없는 오류"
 entryPointException:
   code: "-1000"
-  msg: "해당 리소스에 접근하기 위한 권한이 없습니다."
+  title_msg: "잘못된 접근입니다."
 signinFailed:
   code: "-1000"
-  msg: "로그인에 실패했습니다."
+  title_msg: "로그인에 실패했습니다."
+  do_msg: "아이디 혹은 비밀번호를 확인해주세요."
 userNotFound:
   code: "-1001"
-  msg: "존재하지 않는 사용자입니다."
-alreadyUser:
+  title_msg: "해당하는 유저를 찾을 수 없습니다."
+  do_msg: "다시 확인하고 시도해주세요."
+alreadyUserNickName:
   code: "-1002"
-  msg: "이미 존재하는 사용자입니다."
+  title_msg: "누군가 사용중인 닉네임입니다."
+  do_msg: "다른 닉네임을 입력해주세요."
+alreadyUserEmail:
+  code: "-1002"
+  title_msg: "누군가 사용중인 이메일입니다."
+  do_msg: "다른 이메일을 입력해주세요."
+signupUser:
+  code : "-1004"
+  title_msg: "회원가입중인 계정입니다."
+  do_msg: "회원가입 절차를 끝낸 후 로그인 해주세요."
+emptyData:
+  code: "-1003"
+  title_msg: "입력이 비어있습니다."
+  do_msg: "입력칸에 맞게 입력 후 다시 시도해주세요."
+wrongCode:
+  code: "-1005"
+  title_msg: "코드가 틀립니다."
+  do_msg: "올바른 인증코드를 입력해주세요."
+expiredUser:
+  code: "-1006"
+  title_msg: "만료된 계정입니다."
+  do_msg: "인증코드 입력 시간이 지났습니다. 회원가입을 새로해주세요."
