--- a/src/main/resources/i18n/exception_ko.yml
+++ b/src/main/resources/i18n/exception_ko.yml
@@ -1,38 +1,48 @@
-unKnown:
-  code: "-9999"
-  title_msg: "알 수 없는 오류"
-entryPointException:
+AuthenticationEntryPointException:
   code: "-1000"
-  title_msg: "잘못된 접근입니다."
-signinFailed:
-  code: "-1000"
-  title_msg: "로그인에 실패했습니다."
-  do_msg: "아이디 혹은 비밀번호를 확인해주세요."
-userNotFound:
+  title_msg: "접근에 필요한 권한이 부족합니다."
+  do_msg: "다시 로그인 해주세요."
+EmptyDataException:
   code: "-1001"
-  title_msg: "해당하는 유저를 찾을 수 없습니다."
-  do_msg: "다시 확인하고 시도해주세요."
-alreadyUserNickName:
-  code: "-1002"
-  title_msg: "누군가 사용중인 닉네임입니다."
-  do_msg: "다른 닉네임을 입력해주세요."
-alreadyUserEmail:
-  code: "-1002"
-  title_msg: "누군가 사용중인 이메일입니다."
-  do_msg: "다른 이메일을 입력해주세요."
-signupUser:
-  code : "-1004"
-  title_msg: "회원가입중인 계정입니다."
-  do_msg: "회원가입 절차를 끝낸 후 로그인 해주세요."
-emptyData:
-  code: "-1003"
   title_msg: "입력이 비어있습니다."
-  do_msg: "입력칸에 맞게 입력 후 다시 시도해주세요."
-wrongCode:
-  code: "-1005"
-  title_msg: "코드가 틀립니다."
-  do_msg: "올바른 인증코드를 입력해주세요."
-expiredUser:
-  code: "-1006"
-  title_msg: "만료된 계정입니다."
-  do_msg: "인증코드 입력 시간이 지났습니다. 회원가입을 새로해주세요."
+  do_msg: "입력란을 확인 후 다시 시도해주세요."
+UnKnownException:
+  code: "-1999"
+  title_msg: "오류가 발생했습니다."
+  do_msg: "알 수 없는 오류입니다. 관리자에게 문의하세요."
+UserNotFoundException:
+  code: "-2000"
+  title_msg: "해당 유저가 존재하지 않습니다."
+  do_msg: "아이디와 패스워드를 확인 후 다시 시도해주세요."
+SignUpUserException:
+  code: "-2001"
+  title_msg: "회원가입 중인 계정입니다"
+  do_msg: "기존의 회원가입 절차를 마무리하고 다시 시도해주세요."
+ExpiredPasswordException:
+  code: "-2002"
+  title_msg: "패스워드가 만료된 상태입니다."
+  do_msg: "패스워드를 변경해주세요."
+CodeTimeoutException:
+  code: "-2003"
+  title_msg: "인증코드를 입력 할 수 있는 시간이 지났습니다."
+  do_msg: "이전 절차를 다시 시도해주세요."
+WrongPasswordException:
+  code: "-2004"
+  title_msg: "패스워드와 확인란이 서로 틀립니다."
+  do_msg: "패스워드와 패스워드 확인란을 다시 확인 후 시도해주세요."
+AlreadyUserEmailException:
+  code: "-2005"
+  title_msg: "누군가가 사용중인 이메일 주소입니다."
+  do_msg: "다른 이메일 주소를 입력해주세요."
+AlreadyUserNickNameException:
+  code: "-2006"
+  title_msg: "누군가가 사용중인 닉네임입니다."
+  do_msg: "다른 닉네임으로 입력해주세요."
+WrongCodeException:
+  code: "-2007"
+  title_msg: "인증코드가 틀립니다."
+  do_msg: "확인 후 다시 입력해주세요."
+SignInFailedException:
+  code: "-2008"
+  title_msg: "로그인에 실패했습니다."
+  do_msg: "아이디와 패스워드를 확인 후 다시 시도해주세요."
